--- a/index.html
+++ b/index.html
@@ -31,7 +31,7 @@
         <div class="divider"></div>
         <!-- About / Description -->
         <section class="profile">
-            <img src="../assets/kantor.jpg" alt="Foto Saya" class="profile-img">
+            <img src="assets/kantor.jpg" alt="Foto Saya" class="profile-img">
             <div class="profile-info">
                 <h2>MUHAMMAD MUHAJIRIN CHINSA</h2>
                 <p>Software Engineer | UI/UX Enthusiast</p>
@@ -112,7 +112,7 @@
             <div class="section-title">Sertifikat</div>
             <div class="certificate-gallery">
                 <div class="certificate-item">
-                    <img src="../assets/serti1.png" alt="Dicoding - Frontend Web Developer" class="certificate-img">
+                    <img src="assets/serti1.png" alt="Dicoding - Frontend Web Developer" class="certificate-img">
                     <div class="certificate-desc">
                         ikutan Webinar#20 dari Sinau Koding Academy, <br>
                         seru banget belajar jadi Fullstack Developer dan gimana ini bisa jadi jalan masuk ke dunia
@@ -120,7 +120,7 @@
                     </div>
                 </div>
                 <div class="certificate-item">
-                    <img src="../assets/serti2.png" alt="Google UX Design Certificate" class="certificate-img">
+                    <img src="assets/serti2.png" alt="Google UX Design Certificate" class="certificate-img">
                     <div class="certificate-desc">
                         “Next Level Analytics: Optimizing AI into Everyday Data Workflow”<br>
                         sebuah pengalaman yang membuka wawasan tentang bagaimana kecerdasan buatan bisa diintegrasikan
@@ -128,7 +128,7 @@
                     </div>
                 </div>
                 <div class="certificate-item">
-                    <img src="../assets/diskominfo.png"
+                    <img src="assets/diskominfo.png"
                         alt="FreeCodeCamp Responsive Web Design" class="certificate-img">
                     <div class="certificate-desc">
                         Magang di Diskominfo (Dinas Komunikasi dan Informatika) kota Makassar<br>
@@ -143,11 +143,11 @@
             <div class="section-title">Projects</div>
             <div class="projects-gallery">
                 <div class="project-item">
-                    <img src="../assets/rumah.jpg" alt="Project 1" class="project-img">
+                    <img src="assets/rumah.jpg" alt="Project 1" class="project-img">
                     <div class="project-title">Landing Page Startup Diskominfo</div>
                 </div>
                 <div class="project-item">
-                    <img src="../assets/uiux.jpg" alt="Project 2" class="project-img">
+                    <img src="assets/uiux.jpg" alt="Project 2" class="project-img">
                     <div class="project-title">UI/UX Design Pemerintahan</div>
                 </div>
                 <div class="project-item">
@@ -163,7 +163,7 @@
             <div class="section-title">Contact</div>
             <div class="contact-layout">
                 <div class="contact-photo">
-                    <img src="../assets/selfi.jpg" alt="Foto Kontak" class="contact-img">
+                    <img src="assets/selfi.jpg" alt="Foto Kontak" class="contact-img">
                 </div>
                 <div class="contact-info">
                     <div class="contact-desc">
@@ -205,5 +205,6 @@
     </div>
     <script src="app1.js"></script>
 </body>
+
 
 </html>
